# rss-to-social

./: .last_runs.json  README.md  pyproject.toml  rss_to_social.py
.github/workflows/: post-from-rss.yml
