[project]
name = "rss-to-social"
version = "0.1.0"
description = "RSS to Social uses GitHub Actions to monitor RSS feeds and post new articles to social media."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.61",
    "click>=8.2.1",
    "feedparser>=6.0.11",
    "loguru>=0.7.3",
    "praw>=7.8.1",
    "requests>=2.32.3",
]
